// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MixValidation onFocus, onBlur 1`] = `
Array [
  <div
    class="input-wrap"
    role="wrapper-for-input"
  >
    <label>
      Username
    </label>
    <input
      class="input"
      name="username"
      placeholder="Username"
      role="textbox"
      value=""
    />
  </div>,
  <div
    class="input-wrap"
    role="wrapper-for-input"
  >
    <label>
      First name
    </label>
    <input
      class="input input-error"
      name="profile.firstName"
      placeholder="First name"
      role="textbox"
      value=""
    />
    <span>
      Field is required
    </span>
  </div>,
  <div
    class="input-wrap"
    role="wrapper-for-input"
  >
    <label>
      Last name
    </label>
    <input
      class="input"
      name="profile.lastName"
      placeholder="Last name"
      role="textbox"
      value=""
    />
  </div>,
]
`;

exports[`MixValidation onFocus, onChange: "t" -> "" 1`] = `
Array [
  <div
    class="input-wrap"
    role="wrapper-for-input"
  >
    <label>
      Username
    </label>
    <input
      class="input"
      name="username"
      placeholder="Username"
      role="textbox"
      value=""
    />
  </div>,
  <div
    class="input-wrap"
    role="wrapper-for-input"
  >
    <label>
      First name
    </label>
    <input
      class="input"
      name="profile.firstName"
      placeholder="First name"
      role="textbox"
      value=""
    />
  </div>,
  <div
    class="input-wrap"
    role="wrapper-for-input"
  >
    <label>
      Last name
    </label>
    <input
      class="input"
      name="profile.lastName"
      placeholder="Last name"
      role="textbox"
      value=""
    />
  </div>,
]
`;

exports[`MixValidation onFocus, onChange: "t" -> "", onBlur 1`] = `
Array [
  <div
    class="input-wrap"
    role="wrapper-for-input"
  >
    <label>
      Username
    </label>
    <input
      class="input"
      name="username"
      placeholder="Username"
      role="textbox"
      value=""
    />
  </div>,
  <div
    class="input-wrap"
    role="wrapper-for-input"
  >
    <label>
      First name
    </label>
    <input
      class="input input-error"
      name="profile.firstName"
      placeholder="First name"
      role="textbox"
      value=""
    />
    <span>
      Field is required
    </span>
  </div>,
  <div
    class="input-wrap"
    role="wrapper-for-input"
  >
    <label>
      Last name
    </label>
    <input
      class="input"
      name="profile.lastName"
      placeholder="Last name"
      role="textbox"
      value=""
    />
  </div>,
]
`;

exports[`MixValidation onFocus, onChange: "t", onBlur 1`] = `
Array [
  <div
    class="input-wrap"
    role="wrapper-for-input"
  >
    <label>
      Username
    </label>
    <input
      class="input input-error"
      name="username"
      placeholder="Username"
      role="textbox"
      value="t"
    />
    <span>
      Minimum of 4 characters
    </span>
  </div>,
  <div
    class="input-wrap"
    role="wrapper-for-input"
  >
    <label>
      First name
    </label>
    <input
      class="input"
      name="profile.firstName"
      placeholder="First name"
      role="textbox"
      value=""
    />
  </div>,
  <div
    class="input-wrap"
    role="wrapper-for-input"
  >
    <label>
      Last name
    </label>
    <input
      class="input"
      name="profile.lastName"
      placeholder="Last name"
      role="textbox"
      value=""
    />
  </div>,
]
`;

exports[`MixValidation onFocus, onChange: "test", onBlur 1`] = `
Array [
  <div
    class="input-wrap"
    role="wrapper-for-input"
  >
    <label>
      Username
    </label>
    <input
      class="input"
      name="username"
      placeholder="Username"
      role="textbox"
      value="test"
    />
  </div>,
  <div
    class="input-wrap"
    role="wrapper-for-input"
  >
    <label>
      First name
    </label>
    <input
      class="input"
      name="profile.firstName"
      placeholder="First name"
      role="textbox"
      value=""
    />
  </div>,
  <div
    class="input-wrap"
    role="wrapper-for-input"
  >
    <label>
      Last name
    </label>
    <input
      class="input"
      name="profile.lastName"
      placeholder="Last name"
      role="textbox"
      value=""
    />
  </div>,
]
`;

exports[`MixValidation submit 1`] = `
Array [
  <div
    class="input-wrap"
    role="wrapper-for-input"
  >
    <label>
      Username
    </label>
    <input
      class="input input-error"
      name="username"
      placeholder="Username"
      role="textbox"
      value=""
    />
    <span>
      Field is required
    </span>
  </div>,
  <div
    class="input-wrap"
    role="wrapper-for-input"
  >
    <label>
      First name
    </label>
    <input
      class="input input-error"
      name="profile.firstName"
      placeholder="First name"
      role="textbox"
      value=""
    />
    <span>
      Field is required
    </span>
  </div>,
  <div
    class="input-wrap"
    role="wrapper-for-input"
  >
    <label>
      Last name
    </label>
    <input
      class="input"
      name="profile.lastName"
      placeholder="Last name"
      role="textbox"
      value=""
    />
  </div>,
]
`;
